Fixed bug #34062 (Crash in catch block when many arguments are used)